# hacklib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  bitbucket-pipelines.yml
.github/workflows/: ci.yml
build64/: cmake_reconfig_x64.bat
cmake/: DynamoRIOConfig.cmake
doc/: Doxyfile
include/: d3d11.h
include/dynamorio/: dr_annotation.h  dr_api.h  dr_app.h  dr_config.h  dr_defines.h  dr_events.h  dr_frontend.h  dr_inject.h  dr_ir_decode.h  dr_ir_disassemble.h  dr_ir_encode.h  dr_ir_instr.h  dr_ir_instr_inline.h  dr_ir_instrlist.h  dr_ir_macros.h  dr_ir_macros_aarch64.h  dr_ir_macros_arm.h  dr_ir_macros_x86.h  dr_ir_opcodes.h  dr_ir_opcodes_arm.h  dr_ir_opcodes_x86.h  dr_ir_opnd.h  dr_ir_utils.h  dr_mcxtx.h  dr_modules.h  dr_os_utils.h  dr_proc.h  dr_tools.h  dr_tracedump.h
include/dynamorio/annotations/: dr_annotations.c  dr_annotations.h  dr_annotations_asm.h
lib/: d3d11.lib  drdecode.lib  drlibc.lib
lib64/: d3d11.lib  drdecode.lib  drlibc.lib
src/bf4hack/: CMakeLists.txt  main.cpp
src/disableGfx/: CMakeLists.txt  main.cpp
src/example/: CMakeLists.txt  main.cpp
src/gw2hack/: CMakeLists.txt  main.cpp
src/hacklib/: CMakeLists.txt
src/hacklib/include/glm/detail/: type_mat4x4.hpp  type_vec3.hpp
src/hacklib/include/hacklib/: BitManip.h  ConsoleEx.h  CrashHandler.h  D3DDeviceFetcher.h  Drawer.h  DrawerD3D.h  DrawerOpenGL.h  ExeFile.h  ExecutableAllocator.h  ForeignClass.h  GfxOverlay.h  GfxOverlay_UNIX.h  Handles.h  Hooker.h  IDrawer.h  ImplementMember.h  Injector.h  Input.h  Logging.h  Main.h  Math.h  Memory.h  MessageBox.h  PageAllocator.h  Patch.h  PatternScanner.h  Process.h  Rng.h  StringManip.h  Timer.h  WindowOverlay.h  make_unique.h
src/hacklib/src/: ConsoleEx.cpp  CrashHandler.cpp  CrashHandler_UNIX.cpp  CrashHandler_WIN32.cpp  D3DDeviceFetcher.cpp  D3DDeviceFetcher_WIN32.cpp  Drawer.cpp  DrawerD3D.cpp  DrawerOpenGL.cpp  Drawer_WIN32.cpp  ExeFile.cpp  ExeFile_UNIX.cpp  ExeFile_WIN32.cpp  ExecutableAllocator.cpp  GfxOverlay.cpp  GfxOverlay_UNIX.cpp  GfxOverlay_WIN32.cpp  Hooker.cpp  Hooker_VEH.cpp  IDrawer.cpp  Injector.cpp  Injector_UNIX.cpp  Injector_WIN32.cpp  Input.cpp  Logging.cpp  Main.cpp  Main_UNIX.cpp  Main_WIN32.cpp  Memory_UNIX.cpp  Memory_WIN32.cpp  MessageBox_UNIX.cpp  MessageBox_WIN32.cpp  PageAllocator_UNIX.cpp  PageAllocator_WIN32.cpp  Patch.cpp  PatternScanner.cpp  Process_UNIX.cpp  Process_WIN32.cpp  StringManip.cpp  WindowOverlay.cpp  (+2 more)
src/injector/: CMakeLists.txt  main.cpp
src/overlay/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  lib.cpp  main.cpp  test.cpp
src/testapp/: CMakeLists.txt  main.cpp
src/testdll/: CMakeLists.txt  main.cpp
src/veh_benchmark/: CMakeLists.txt  main.cpp
