PROJECT(hl_test_host)

ADD_LIBRARY(${PROJECT_NAME} SHARED test.cpp)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES FOLDER ${PROJECT_NAME})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hacklib)


PROJECT(hl_test_lib)

ADD_LIBRARY(${PROJECT_NAME} SHARED lib.cpp)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES FOLDER ${PROJECT_NAME})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hacklib)


PROJECT(hl_test)

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)
IF(UNIX)
    FIND_PACKAGE(Threads REQUIRED)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} dl ${CMAKE_THREAD_LIBS_INIT})
    TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PUBLIC "-pthread")
ENDIF()
