PROJECT(hl_test_host)

ADD_LIBRARY(${PROJECT_NAME} SHARED test.cpp)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES FOLDER hacklib/tests)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hacklib)


PROJECT(hl_test_lib)

ADD_LIBRARY(${PROJECT_NAME} SHARED lib.cpp)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES FOLDER hacklib/tests)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hacklib)


PROJECT(hl_test)

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)
ADD_DEPENDENCIES(${PROJECT_NAME} hl_test_host hl_test_lib)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES FOLDER hacklib/tests)
IF(UNIX)
    FIND_PACKAGE(Threads REQUIRED)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} dl ${CMAKE_THREAD_LIBS_INIT})
    TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PUBLIC "-pthread")
ENDIF()
